--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+URL: https://github.com/r-lib/diffviewer
+BugReports: https://github.com/r-lib/diffviewer/issues
