--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,11 @@ Authors@R:
              email = "winston@rstudio.com"),
       person(given = "RStudio",
              role = "cph"))
-Description: A HTML widget that shows differences between files (text and 
-    image).
+Description: A HTML widget that shows differences between files
+    (text and image).
 License: MIT + file LICENSE
+URL: https://github.com/r-lib/diffviewer
+BugReports: https://github.com/r-lib/diffviewer/issues
 Imports: 
     htmlwidgets,
     jsonlite
@@ -22,5 +24,3 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-URL: https://github.com/r-lib/diffviewer
-BugReports: https://github.com/r-lib/diffviewer/issues
