Add @jbkunst to authors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,9 @@ Authors@R:
              family = "Wickham",
              role = c("aut", "cre"),
              email = "hadley@rstudio.com"),
+      person(given = "Joshua",
+             family = "Kunst",
+             role = "aut"),
       person(given = "Winston",
              family = "Chang",
              role = "aut",
