--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: diffviewer
-Title: HTML Widget That Shows Differences Between Files
+Title: HTML Widget To Show File Differences
 Version: 0.0.0.9000
 Authors@R: 
     c(person(given = "Hadley",
@@ -16,7 +16,7 @@ Authors@R:
       person(given = "RStudio",
              role = "cph"))
 Description: A HTML widget that shows differences between files
-    (text and image).
+    (text, images, and data frames).
 License: MIT + file LICENSE
 URL: https://github.com/r-lib/diffviewer
 BugReports: https://github.com/r-lib/diffviewer/issues
