--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: diffviewer
-Title: HTML Widget To Show File Differences
+Title: HTML Widget to Show File Differences
 Version: 0.0.0.9000
 Authors@R: 
     c(person(given = "Hadley",
