--- a/inst/htmlwidgets/visual_diff.yaml
+++ b/inst/htmlwidgets/visual_diff.yaml
@@ -22,11 +22,11 @@ dependencies:
     src: "htmlwidgets/lib/resemble"
     script:
       - resemble.js
-  - name: csv2array
-    version: 0.1
-    src: htmlwidgets/lib/csv2array
+  - name: PapaParse
+    version: 5.3.0
+    src: htmlwidgets/lib/PapaParse
     script:
-      - csv2array.js
+      - papaparse.min.js
   - name: daff
     version: 1.3.39
     src: htmlwidgets/lib/daff
