--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ Authors@R:
 Description: A HTML widget that shows differences between files
     (text, images, and data frames).
 License: MIT + file LICENSE
-URL: https://github.com/r-lib/diffviewer
+URL: https://diffviewer.r-lib.org, https://github.com/r-lib/diffviewer
 BugReports: https://github.com/r-lib/diffviewer/issues
 Imports: 
     htmlwidgets,
